tests/ui/union/unresolved-field-isnt-copy.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/unresolved-field-isnt-copy.rs:4:15
   |
LL |     x: *const Missing,
   |               ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
